--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <meta name="description" content="Bootstrap-tabx : Bootstrap标签页扩展" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <link rel="stylesheet" type="text/css" href="http://pic.ofcard.com/bootstrap/css/bootstrap.min.css" media="all" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/bootstrap-tabx.css">
+        <script type="text/javascript" src="http://pic.ofcard.com/jslib/jquery/jquery-1.8.1.min.js"></script>
+        <script type="text/javascript" src="http://pic.ofcard.com/jslib/jquery/frame/bootstrap.min.js"></script>
+        <script type="text/javascript" src="javascripts/bootstrap-tabx.js"></script>
+<script type="text/javascript">
+$(function(){
+$(".nav-tabs").tabx();
+        $('.nav-list a').click(function (e) {
+                  e.preventDefault();
+    $(".nav-tabs").tabx("add",{
+        id : $(this).attr("href").substr(1),
+        title: $(this).text(),
+        href: $(this).attr("link")
+    });
+        });
+        
+});
+</script>
     <title>Bootstrap-tabx</title>
   </head>
 
@@ -38,6 +56,29 @@
 
 <h2>
 <a name="%E7%94%A8%E6%B3%95%E7%A4%BA%E4%BE%8B" class="anchor" href="#%E7%94%A8%E6%B3%95%E7%A4%BA%E4%BE%8B"><span class="octicon octicon-link"></span></a>用法示例</h2>
+
+<h3>示例效果</h3>
+<div style="width:800px;background-color: #ffffff;">
+<div class="container-fluid">
+        <div class="row-fluid">
+                <div class="span2">
+                        <ul class="nav nav-list">
+                                <li><a href="#tab3" link="http://www.ofpay.com">欧飞网</a></li>
+                                <li><a href="#tab4" link="http://www.qianmi.com">千米网</a></li>
+                                <li><a href="#tab5" link="http://www.gonghuo.com">供货网</a></li>
+                        </ul>
+                </div>
+                <div class="span10">
+                <ul class="nav nav-tabs">
+                          <li class="active"><a href="#home">首页</a></li>
+                        </ul>
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="home">这是一个静态标签页。</div>
+                        </div>
+            </div>
+        </div>
+</div>
+</div>
 
 <h3>
 <a name="%E9%9D%99%E6%80%81html" class="anchor" href="#%E9%9D%99%E6%80%81html"><span class="octicon octicon-link"></span></a>静态Html</h3>
