链接使用href,关闭按钮添加手形指针

--- a/demo.html
+++ b/demo.html
@@ -17,9 +17,9 @@
 		$('.nav-list a').click(function (e) {
 			  e.preventDefault();
             $(".nav-tabs").tabx("add",{
-                id : $(this).attr("href").substr(1),
+                id : $(this).attr("id"),
                 title: $(this).text(),
-                href: $(this).attr("link")
+                href: $(this).attr("href")
             });
 		});
 		
@@ -33,9 +33,9 @@
 		<div class="row-fluid">
 			<div class="span2">
 				<ul class="nav nav-list">
-					<li><a href="#tab3" link="http://www.ofpay.com">欧飞网</a></li>
-					<li><a href="#tab4" link="http://www.qianmi.com">千米网</a></li>
-					<li><a href="#tab5" link="http://www.gonghuo.com">供货网</a></li>
+					<li><a id="ofpay" href="http://www.ofpay.com">欧飞网</a></li>
+					<li><a id="qianmi" href="http://www.qianmi.com">千米网</a></li>
+					<li><a id="gonghuo" href="http://www.gonghuo.com">供货网</a></li>
 				</ul>
 			</div>
 			<div class="span10">
